# wyland

./: .TODO  .clang-format  .gitignore  .gitmodules  .todo  CMakeLists.txt  README.md  bytes.hpp  debugger  debugger.cpp  doc.md  hey.py  icon.svg.import  instructions_list.txt  operators.hpp  os.h  project.godot  targets.h  tmp.asm  wfiles.h  wformat.hpp  wmmbase.hpp  wtargb.hpp  wtarget64.cpp  wtarget64.hpp  wtypes.h  wyland  wyland.cpp  wyland.h  wyland.hpp  wyland.sln  wysc.json
Scenes/: Vmui.cs  home.tscn  vmui.tscn
Source/: home.tscn
Source/Compiler/Assembler/: Assembler.cs  Expand.cs
Source/FileExplorer/: file_explorer.tscn  file_object.tscn
Source/Kernel/: Kernel.cs  kernel.tscn
Source/Kernel/vm/: Dobuyo.cs  WylandKokuyo.cs  debug.cpp  interface.cpp  kokuyo.cpp  kokuyo.hpp  kokuyo.version.c
Source/Kernel/vm/Debug/: KokuyoDebuger.cs  kokuyo_debuger.tscn
Source/Kernel/vm/cpp/: .todo  algo.hpp  dlapi.h  exportapi.h  interface.cpp  klang.cpp  kokuyo  kokuyo.cpp  kokuyo.hpp  stack.hpp  std.hpp  stdc.h  wargs.hpp  wbin.hpp  wstream.hpp  wyland-cli.cpp  wyland.cpp
Source/Kernel/vm/cpp/clang/: asm.cpp  assembler.cpp  clang.cpp  clang.h  language.txt
Source/Kernel/vm/cpp/debug/: Debuyo.hpp  dinterface.cpp  op2bin.hpp
Source/Kernel/vm/cpp/debug/vm/: deb  deb.cpp  kokuyo
Source/Kernel/vm/cpp/klang/: dlb.h  klang.cpp
Source/Kernel/vm/cpp/kokuyo.dSYM/Contents/: Info.plist
Source/Kernel/vm/cpp/kokuyo.dSYM/Contents/Resources/DWARF/: kokuyo
Source/Kernel/vm/cpp/kokuyo.dSYM/Contents/Resources/Relocations/aarch64/: kokuyo.yml
Source/Kernel/vm/cpp/libs/: io.c  wyland.c
Source/python/: asmlib.asm  compiler.py  included.asm  os.asm  tmp.asm
Source/python/debug/: fn.c  kokuyo  lib.dylib  wyland
VMHandleNode/: WylandVmHandle.cs  wyland_vm_handle.tscn
asm/: asm.py  asmlib.asm  assembler  assembler.cpp  settable.hpp  text.hpp
builds/: build.sh  wyland-macOS-u
compiler/: main.asm  program.asm  program.txt  program.wsc  wysc  wysc.cpp  wysm  wysm.cpp
debug/: askstdin.cpp  debug  debug.cpp  default  default.cpp  div0  div0.cpp  lib  libwysm.cpp  main.cpp  testFuncs.cpp
debug/libs/: asm.hpp
js/: wheader.js  wyc.js  wyland.buildcommand.txt  wyscc.js  wysctc.js
libs/: assembler.cpp  binary.hpp
os/: wyland.asm  wyland.header.asm  wyland.main.asm  wyland.temp.asm  wyland.utiles.asm
python/: asm.py  input.asm  littlelang.py  main.asm  publisher.py  symview.py  wcl.py  wlang.py  wld.py  write.py  wsyv.py  wyan.py  wyland.section.main.txt  wysc.py  wysm.py
python/test/: main.asm
runtime/: wylrt.hpp
src/: CMakeLists.txt  cache.cpp  cache.hpp  ccache.cpp  disk.hpp  envc.hpp  externdef.cpp  filestream.hpp  icache.hpp  libcallc.hpp  main.cpp  parser.hpp  regs.hpp  security.hpp  sock2.h  system.hpp  targets.h  warch128.hpp  warch128_regs.hpp  wc++std.hpp  wdebug.hpp  wfast.hpp  wfiles.h  wformat.hpp  wmmbase.hpp  wmmio.hpp  wmutiles.hpp  wtargb.hpp  wtarget32.hpp  wtarget64.hpp  wtargetfast.hpp  wtypes.h  wyland.cpp  wyland.h  wyland.hpp  wyland_config.hpp  wylrt.h  wysc++.py  wysc.json
src/bios/: bios.hpp  biosGraphicsModule.hpp  bios_backend.cpp  bios_backend.hpp  bios_disk.hpp  bios_usb.hpp  bios_usb_types.h
src/bios/stdusb/: stdusb.hpp
src/compiler/: iwysm.hpp  wysm.cpp
src/data/: wyland_version.h
src/def/: usbEXdef.hpp  usbdef.hpp  wiodef.hpp
src/interfaces/: ConsoleGraphics.hpp  SDLInterface.cpp  SDLInterface.hpp  exInterface.hpp  interface.hpp  stdout.hpp  winface.h
src/interfaces/.SDL2/lib/cmake/SDL2/: sdl2-config.cmake
src/interfaces/SDL2/lib/: libSDL2.dylib
src/interfaces/SDL2/lib/pkgconfig/: sdl2.pc
src/libs/: gpu.c  io.dylib  stdos.cpp
src/libs/src/: io.c
src/libs/test/: io.asm
src/scripts/: increment_build.py
tools/: debugger  debugger.cpp
